deployments/logging/kubernetes-addons-fluentd-elasticsearch/kibana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana
  namespace: kube-system
  labels:
    k8s-app: kibana-logging
    kubernetes.io/cluster-service: "true"
    addonmanager.kubernetes.io/mode: Reconcile
    stack: logging
spec:
  rules:
  -
    host: kibana.minikube.localnet
    # host: kibana.j9egj.k8s.ginger.eu-central-1.aws.gigantic.io
    http:
      paths:
      - path: /
        backend:
          serviceName: kibana
          servicePort: 5601
